--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,31 @@
-.App {
-  text-align: center;
+
+
+#navigation_bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#navigation_bar li {
+    display: inline;
+
+    background-repeat: no-repeat;
+    background-position: left center; 
+
+    padding-left: 24px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#navigation_bar li:first-child {
+    /* padding-left: 0;
+       background: none; */
 }
 
 
+#navigation_bar a { 
+    color: inherit;
+    text-decoration: none;
+} 
 
-#identified_person_name {
-  position: absolute;
-  width: 100%;
-  color:white;
-  font-size: 5em;
-  background: rgba(17, 17, 17, 0.274);
-}
 
-#canvas_live_stream {
-  width: 100%;
-  height: 100%;
-  background: #111;
-}
+
+
